# boids

./: .gitignore  CNAME  Cargo.toml  Cargo.toml~  README.md  Trunk.toml  boids-b47559612868180c.js  bonnie.toml  index.html  package-lock.json  package.json  styles-8ab95547d2dc1d20.css  styles.css  tailwind.config.js  vercel.json
.github/workflows/: build-deploy.yaml  deploy-page.yaml  release.yaml
src/: boid.rs  lib.rs  main.rs  web_ui.rs
