[package]
name = "boids" # ToDo
version = "0.1.0"
publish = false
authors = ["liam Wirth"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

# [features]
# dev = [
    # "bevy/dynamic_linking",
# ]
# web:

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx, since that is covered in `mobile`
[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_state",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin",
] }
bevy_asset_loader = { version = "0.21" }
rand = { version = "0.8.3" }

winit = { version = "0.30", default-features = false }
image = { version = "0.25", default-features = false }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
bevy_prototype_lyon = "0.12.0"
bevy_spatial = "0.9.0"
halton = "0.2.1"
wasm-bindgen = "0.2.93"
bevy_egui = { version = "0.28.0", default-features = false, features = ["default_fonts"] }
# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"

[profile.dev]
opt-level = 1 # someone says this makes it faster to compile I dunno

[alias]
build = "build --release"
build-web = "build --target wasm32-unknown-unknown --release"
clip = "clippy --all-targets"

